--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-mqtt-client": "0.0.5",
     "aws-sdk": "^2.82.0",
     "leaflet": "^1.1.0",
+    "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-material": "^0.7.4",
     "vue-resource": "^1.3.4",
